--- a/css/styles.css
+++ b/css/styles.css
@@ -204,15 +204,14 @@ body {
 /* -----------------------portfolio button------------------------------ */
 
 .button-item {
-    background-color: #f5f4fa;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
-    border-radius: 4px;
-    border: none;
-    outline: none;
+    background-color: #f5f4fa;
+    color: var(--text-title-color);
     cursor: pointer;
 }
 .second-btn {
