--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,19 @@ body {
 
 /* -----------------------portfolio button------------------------------ */
 
+.content-box {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .button-item {
     font-family: inherit;
     font-weight: 500;
