--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 :root {
-    --hero-btn-color: #2196f3;
-    --list-btn-color: #2196f3;
+    --alternative-color: #2196f3;
     --nav-heder-color: #2196f3;
     --footer-color: #2f303a;
     --hero-color: #2f303a;
@@ -11,7 +10,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #e5e5e5;
+    background-color: var(--primary-white-color)
     color: var(--text-title-color);
 }
 
@@ -25,19 +24,17 @@ body {
 
 /*------------------------ header------------------------------*/
 .header-logo {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    color: #2196f3;
+    color: var(--alternative-color);
 }
 .color {
     color: var(--text-title-color);
 }
 
-.header-link,
-.header-mail,
-.header-tel {
+.header-link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -45,20 +42,19 @@ body {
     color: var(--text-title-color);
 }
 
+.adress-link {
+    color: var(--text-color);
+}
+
 .header-link:hover,
-.header-link:focus {
-    color: var(--nav-heder-color);
-}
-.header-mail:hover,
-.header-mail:focus {
-    color: var(--nav-heder-color);
-}
-.header-tel:hover,
-.header-tel:focus {
+.header-link:focus,
+.adress-link:hover,
+.adress-link:focus
+ {
     color: var(--nav-heder-color);
 }
 
-.curent {
+.current {
     color: var(--nav-heder-color);
 }
 
@@ -71,7 +67,7 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--primary-white-color)
 }
 
 .hero-btn {
@@ -79,19 +75,19 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
-    background-color: var(--hero-btn-color);
-    color: #ffffff;
+    background-color: var(--alternative-color);
+    color: var(--primary-white-color)
     cursor: pointer;
 }
 .pointer {
-    background-color: var(--hero-btn-color);
-    color: #ffffff;
+    background-color: var(--alternative-color);
+    color: var(--primary-white-color)
 }
 
 .pointer:hover,
 .pointer:focus {
     background-color: #188ce8;
-    color: #ffffff;
+    color:var(--primary-white-color)
 }
 
 /* -----------------------main------------------------------ */
@@ -115,6 +111,7 @@ body {
     line-height: 1.14;
     letter-spacing: 0.03em;
     color: var(--text-title-color);
+    text-transform: var(--text-color);
 }
 
 .main-text {
@@ -162,7 +159,7 @@ body {
 /* -----------------------footer------------------------------ */
 
 .footer-logo {
-    font-family: 'Raleway';
+    font-family: inherit;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -175,30 +172,25 @@ body {
 }
 
 .footer-adress,
-.footer-mail,
-.footer-tel {
-    font-family: 'Roboto';
+.footer-contact {
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #ffffff;
+    color: var(--primary-white-color);
+}
+
+.footer-contact {
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-adress:hover,
-.footer-adress:focus {
-    color: #2196f3;
-}
-
-.footer-mail:hover,
-.footer-mail:focus {
-    color: #2196f3;
-}
-
-.footer-tel:hover,
-.footer-tel:focus {
-    color: #2196f3;
+.footer-adress:focus,
+.footer-contact:hover,
+.footer-contact:focus {
+    color: var(--nav-heder-color);
 }
 
 /* -----------------------portfolio button------------------------------ */
@@ -217,31 +209,29 @@ body {
 }
 
 .button-item {
-    font-family: inherit;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.62;
+    line-height: 1.6;
     text-align: center;
     letter-spacing: 0.03em;
-    background-color: #f5f4fa;
-    color: var(--text-title-color);
+    color: #212121;
+    background: #f5f4fa;
     cursor: pointer;
 }
 
-.second-btn-curent {
+.button-item:hover,
+.button-item:focus {
     color: #ffffff;
-    background-color: var(--nav-heder-color);
+    background: #2196f3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.second-btn {
-    color: var(--text-title-color);
-    background-color: #f5f4fa;
-}
-
-.second-btn:hover,
-.second-btn:focus {
-    background-color: var(--nav-heder-color);
-    color: #f5f4fa;
+.current-button {
+    color: var(--primary-white-color);
+    background: var(--nav-heder-color);
 }
 
 /* -----------------------portfolio content------------------------------ */
